2004-09-16  Matt Rice <ratmice@yahoo.com>
	* Source/NSTextFieldCell.m (+initialize): Bump class version.
	(-initWithCoder:): When decoding the previous version of NSTextFieldCell
	replace the old default _action_mask with the new default value. 
	(Fixes #9609 for .gorm files)

2004-08-02  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Documentation/Gui/Gui.gsdoc: Update to reflect slight rearrangement
	of material to initiate a GUI programming manual.  This partially
	reverts a change that was accidentally undone earlier.

2004-09-13 Matt Rice <ratmice@yahoo.com>
	* NSScrollView.h: Declare new ivar _cornerView and private method
	-_synchronizeCornerAndHeaderView
	* NSScrollView.m (tile): Call _synchronizeCornerAndHeaderView method 
	from here. Replace local cornerView variable with _cornerView.
	(-setDocumentView:): Remove code to set the corner and header views.
	(-_synchronizeCornerAndHeaderView): Implement new method.
	* NSTableView.m (-setHeaderView:, -setCornerView:): call tile on the 
	scroll view we're in. Remove comments and warnings for cases which are
	now implemented.

2004-09-12 Matt Rice <ratmice@yahoo.com>
	* Headers/AppKit/NSCell.h (-_sendsActionOn:): New method.
	* Source/NSCell.m (-_sendsActionOn:): Implement it.
	* Source/NSTextFieldCell.m (-initTextCell:): Change _action_mask to a
	key press.
	* Source/NSTableView.m (-mouseDown:): Use _sendsActionOn: to only modify
	the object value and send the event to the cell if the cell works on
	mouse events. (Fixes #9609).

2004-09-12 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/NSDataLinkPanel.h: Added new attributes.
	* Source/NSDataLinkPanel.m: Implemented some 
	methods.
	* Panels/English.lproj/GSDataLinkPanel.gorm: Updated
	graphics and added link to new ivar.
	* Source/NSDataLink.m:
	* Source/NSDataLinkManager.m: Code cleanup.
	
2004-09-11 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSCell.m: Reverted previous change. 