@@ -1,3 +1,12 @@
+2004-09-16  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSCell.m (-setStringValue:, -setFont:, -setImage:):  Use
+	method call to change cell type. (Readded this change)
+	* Source/NSButtonCell.m (-setType:):  Overwrite super method with
+	empty implementation. Patch by Quentin Mathe <qmathe@club-internet.fr>.
+	* Source/NSView.m (-initWithCoder:):  Added the first bit of
+	keyed flags decoding.	
+		
 2004-09-16  Matt Rice <ratmice@yahoo.com>
 	* Source/NSTextFieldCell.m (+initialize): Bump class version.
 	(-initWithCoder:): When decoding the previous version of NSTextFieldCell
